# skating_analysis

./: .gitignore  README.md  pyproject.toml
service/: __init__.py  api.py  models.py  pipeline.py
webapp/: index.html
