[project]
name = "skating-pipeline"
version = "2.0.0"
description = "AI-powered figure skating jump analysis and correction — service and webapp"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13.7",
    "python-multipart>=0.0.9",
]

[project.scripts]
skating-api  = "service.api:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["service"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
